--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "jsx": "preserve",
     "jsxImportSource": "solid-js"
   },
-  "include": ["src/**/*.d.ts", "src/**/*.ts"],
+  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["**/*.js", "node_modules"],
   "files": ["src/index.tsx"]
 }
