--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "core-js": "^3.8.1",
     "localforage": "^1.10.0",
-    "solid-js": "^1.3.2"
+    "solid-js": "^1.3.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
