--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "dependencies": {
     "core-js": "^3.8.1",
     "localforage": "^1.10.0",
-    "solid-js": "^1.3.2",
-    "styled-components": "^5.3.3"
+    "solid-js": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
@@ -48,6 +47,8 @@
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
     "postcss-loader": "^6.2.1",
+    "sass": "^1.48.0",
+    "sass-loader": "^12.4.0",
     "standard": "^16.0.4",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.0",
