--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jokernakartama/kcal-pwa#readme",
   "dependencies": {
+    "classnames": "^2.3.1",
     "core-js": "^3.8.1",
     "localforage": "^1.10.0",
     "solid-js": "^1.3.2"
