Change eslint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -37,6 +37,7 @@
     "indent": ["error", 2],
     "no-irregular-whitespace": 2,
     "no-trailing-spaces": 0,
+    "multiline-comment-style": 0,
     "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 0 }],
     "eol-last": ["error", "always"],
     "arrow-parens": 0,
@@ -44,6 +45,7 @@
     "no-console": ["error", { "allow": ["warn", "error", "info"] }],
     "generator-star-spacing": 0,
     "array-bracket-spacing": ["error", "never"],
+    "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/consistent-type-imports": 0,
     "@typescript-eslint/naming-convention": 0
