--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "core-js": "^3.8.1",
-    "localforage": "^1.10.0",
+    "idb": "^7.0.0",
     "solid-js": "^1.3.2"
   },
   "devDependencies": {
