--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "core-js": "^3.8.1",
+    "i18next": "^21.6.10",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "i18next-chained-backend": "^3.0.2",
+    "i18next-http-backend": "^1.3.2",
     "idb": "^7.0.0",
     "solid-js": "^1.3.2"
   },
@@ -37,6 +41,7 @@
     "babel-loader": "^8.2.3",
     "babel-preset-solid": "^1.3.2",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.2.3",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.3.1",
     "eslint": "^7.32.0",
