--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,8 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v2
 
+      - name: Fetch tags and changes
+        run: git fetch --prune --unshallow --tags
 
       - name: Get the app version from tags
         id: global_env
