--- a/.eslintrc
+++ b/.eslintrc
@@ -46,12 +46,24 @@
     "no-console": ["error", { "allow": ["warn", "error", "info"] }],
     "generator-star-spacing": 0,
     "array-bracket-spacing": ["error", "never"],
+    "object-curly-spacing": ["error", "always"],
+    "keyword-spacing": 2,
+    "space-infix-ops": 0,
     "space-before-function-paren": ["error", {
       "anonymous": "never",
       "named": "never",
       "asyncArrow": "always"
     }],
     "no-restricted-globals": [0, "self"],
+    "@typescript-eslint/space-infix-ops": 2,
+    "@typescript-eslint/type-annotation-spacing": [
+      2,
+      {
+        "before": false,
+        "after": true,
+        "overrides": { "arrow": { "before": true, "after": true }}
+      }
+    ],
     "@typescript-eslint/promise-function-async": 0,
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/explicit-function-return-type": 0,
