--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "core-js": "^3.8.1",
+    "dexie": "^3.2.1",
     "i18next": "^21.6.10",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-chained-backend": "^3.0.2",
     "i18next-http-backend": "^1.3.2",
-    "idb": "^7.0.0",
     "solid-js": "^1.3.2"
   },
   "devDependencies": {
