--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
   },
   "rules": {
     "prettier/prettier": 0,
+    "no-param-reassign": ["error", { "props": false }],
     "no-default-export": 0,
     "no-continue": 0,
     "quotes": ["error", "single"],
