--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "kcal-pwa",
+  "version": "1.0.0",
   "description": "An app that helps you keep track of your daily nutrients",
   "browserslist": "last 3 versions, ie >= 10, not dead",
   "scripts": {
     "dev": "node build/dev.js",
     "build": "node build/build.js",
-    "test": "tape src/**/*.test.js | tap-spec"
+    "test": "tape src/**/*.test.js | tap-spec",
+    "lint": "eslint ./src --fix"
   },
   "repository": {
     "type": "git",
@@ -21,7 +23,6 @@
     "classnames": "^2.3.1",
     "core-js": "^3.8.1",
     "dexie": "^3.2.1",
-    "eslint-config-standard-with-typescript": "^22.0.0",
     "i18next": "^21.6.10",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-chained-backend": "^3.0.2",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
+    "@babel/eslint-parser": "^7.18.9",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-export-namespace-from": "^7.16.7",
     "@babel/plugin-proposal-optional-chaining": "^7.16.7",
@@ -39,24 +41,27 @@
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "autoprefixer": "^10.4.2",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
     "babel-preset-solid": "^1.3.2",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^10.2.3",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.3.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
     "eslint": "^8.20.0",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.6",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
-    "postcss-loader": "^6.2.1",
+    "postcss-loader": "^7.0.1",
     "sass": "^1.48.0",
-    "sass-loader": "^12.4.0",
-    "standard": "^16.0.4",
+    "sass-loader": "^13.0.2",
+    "standard": "^17.0.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.0",
     "ts-loader": "^9.2.6",
