--- a/.eslintrc
+++ b/.eslintrc
@@ -36,7 +36,7 @@
     "no-continue": 0,
     "quotes": ["error", "single"],
     "semi": ["error", "never"],
-    "indent": ["error", 2],
+    // "indent": ["error", 2],
     "no-irregular-whitespace": 2,
     "no-trailing-spaces": 0,
     "multiline-comment-style": 0,
@@ -58,6 +58,10 @@
     }],
     "no-restricted-globals": [0, "self"],
     "no-nested-ternary": 0,
+    "@typescript-eslint/indent": [
+      "error",
+      2
+    ],
     "@typescript-eslint/strict-boolean-expressions": [0, {
       "allowNullableObject": true
     }],
