--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/jokernakartama/kcal-pwa#readme",
   "dependencies": {
-    "@solidjs/router": "^0.4.3",
+    "@solidjs/router": "^0.7.0",
     "classnames": "^2.3.1",
     "core-js": "^3.8.1",
     "dexie": "^3.2.1",
@@ -28,7 +28,9 @@
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-chained-backend": "^3.0.2",
     "i18next-http-backend": "^1.3.2",
-    "solid-js": "^1.3.2"
+    "solid-js": "^1.3.2",
+    "solid-keep-alive": "^0.2.3",
+    "solid-transition-group": "^0.0.13"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
