--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-chained-backend": "^3.0.2",
     "i18next-http-backend": "^1.3.2",
+    "regexparam": "^2.0.1",
     "solid-js": "^1.3.2",
     "solid-keep-alive": "^0.2.3",
     "solid-transition-group": "^0.0.13"
