--- a/.eslintrc
+++ b/.eslintrc
@@ -83,6 +83,9 @@
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/consistent-type-imports": 0,
-    "@typescript-eslint/naming-convention": 0
+    "@typescript-eslint/naming-convention": 0,
+    "@typescript-eslint/prefer-nullish-coalescing": [0, {
+      "ignoreMixedLogicalExpressions": true
+    }]
   }
 }
