Fix archieved items

--- a/.eslintrc
+++ b/.eslintrc
@@ -44,12 +44,13 @@
     "eol-last": ["error", "always"],
     "arrow-parens": 0,
     "no-multi-spaces": 2,
-    "no-console": ["error", { "allow": ["warn", "error", "info"] }],
+    "no-console": ["warn", { "allow": ["warn", "error", "info"] }],
     "generator-star-spacing": 0,
     "array-bracket-spacing": ["error", "never"],
     "object-curly-spacing": ["error", "always"],
     "keyword-spacing": 2,
     "space-infix-ops": 0,
+    "no-underscore-dangle": "off",
     "no-use-before-define": ["error", { "functions": false }],
     "space-before-function-paren": ["error", {
       "anonymous": "never",
